--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ Use it to make something cool, have fun, and share what you've learned with othe
 	width: 100%;
 }
 #content {
-	margin: 0 280px 0 0;
+	width: 640px;
+	margin-left:auto;
+	margin-right:auto;
 }
 #main .widget-area {
 	float: right;
@@ -147,11 +149,43 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 /* =Content
 -------------------------------------------------------------- */
-
-.entry-meta {
-	clear: both;
+a {text-decoration:none;}
+div.entry-meta {
 	display: block;
+	float: left;
+	margin-left: -220px;
+	width: 200px;
+	text-align: right;
+	color: #A3A3A3;
 }
+.entry-meta ul {
+	margin-top: 5px;
+	list-style: none;
+}
+.entry-meta ul li {
+	border-bottom: 1px #B3B3B3 dotted;
+	padding-bottom: 20px;
+}
+.sep{
+	font-style: italic;
+}
+.entry-meta time {
+	width:100px;
+	height: 200px;
+	margin: 5px;
+	font-family: Georgia,'Times New Roman';
+	line-height: 1em;
+}
+.entry-meta time .day {
+	float: left;
+	font-size: 2.5em;
+	margin-left: 30px;
+}
+.entry-meta time div { height: 40px;}
+.entry-meta .cat-links {
+	display:block;
+}
+
 #content nav {
 	display: block;
 	overflow: hidden;
